a bug i couldn't squash, stumped atm.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -317,6 +317,24 @@ li.new-item {
     }
 }
 
+li.removed-item {
+    animation: removed-item-animation 1s cubic-bezier(0.55, -0.04, 0.91, 0.94) forwards;
+    /*transform origin is moved to the bottom left corner*/
+    transform-origin: 0% 100%;
+}
+
+@keyframes removed-item-animation {
+    0% {
+        opacity: 1;
+        transform: rotateZ(0);
+    }
+
+    100% {
+        opacity: 0;
+        transform: translateY(600px) rotateZ(90deg);
+    }
+}
+
 .dashboard-input input {
     width: 85%;
 }
